<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpLoginActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/stsk_logo" />


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/continue_with_phone"
        android:textColor="@color/purple"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/Number_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/text"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/white_grident"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/nintyone"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_arrow_drop_down_24"
            android:tint="@color/black"
            android:padding="0dp"
            />


        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"

            android:background="@color/light_black" />

        <EditText
            android:id="@+id/mobileNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@null"
            android:hint="@string/enter_the_mobile_here"
            android:inputType="number"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/Number_layout"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/blue_gradient"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp" />
</RelativeLayout>