<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10sdp"
    android:elevation="@dimen/_20sdp"
    app:cardCornerRadius="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgs"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_250sdp"
            android:src="@drawable/webhome" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/white_grident"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/furnished"
                    android:textColor="@color/neon"
                    android:textSize="@dimen/_15sdp" />


            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_20sdp">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/heart" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_below="@+id/imgs"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/rupees"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/banasankari"
                android:textColor="@color/medium_black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/bed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/two"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:src="@drawable/bath" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/one"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:src="@drawable/hall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/thasound"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>