<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/off_white"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_60sdp">


        <LinearLayout
            android:id="@+id/layout_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/location"
                    android:tint="@color/purple" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/bangaluru_karnataka"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:rotation="90"
                    android:src="@drawable/arrow"
                    android:tint="@color/purple" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"

                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:background="@drawable/new_customise_button"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:src="@drawable/search"
                        android:tint="@color/purple" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:hint="@string/find"

                        android:textColorHint="@color/purple" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:rotation="90"
                        android:src="@drawable/filter"
                        android:tint="@color/purple" />

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/bell_icon"
                    android:tint="@color/purple" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/browse_categories"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:text="@string/more"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_15sdp" />


                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:rotation="90"
                    android:src="@drawable/up" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tittle_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sub_tittle"
                android:layout_marginTop="@dimen/_5sdp"
                android:clipToPadding="false"
                android:paddingStart="@dimen/_10sdp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/recommendation_for_you"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/details_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/text_ratting"
                android:layout_marginTop="@dimen/_10sdp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:visibility="visible"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/home_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_gradient"
        android:orientation="horizontal"
        android:weightSum="10">

        <!--Module One-->
        <RelativeLayout
            android:id="@+id/module_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/module_one_icon"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/home"
                    android:tint="@color/purple" />


                <TextView
                    android:id="@+id/module_one_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/home"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>


        </RelativeLayout>

        <!--Module Two-->
        <RelativeLayout
            android:id="@+id/module_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/module_two_icon"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:paddingLeft="@dimen/_1sdp"
                    android:paddingTop="@dimen/_1sdp"
                    android:paddingRight="@dimen/_1sdp"
                    android:src="@drawable/messenger"
                    android:tint="@color/purple" />


                <TextView
                    android:id="@+id/module_two_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/chat"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/module_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/module_add_icon"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:paddingLeft="@dimen/_1sdp"
                    android:paddingTop="@dimen/_1sdp"
                    android:paddingRight="@dimen/_1sdp"
                    android:src="@drawable/ic_baseline_add_circle_24"
                    android:tint="@color/purple" />

                <TextView
                    android:id="@+id/module_post_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"

                    android:text="@string/post"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>


        </RelativeLayout>

        <!--Module Three-->
        <RelativeLayout
            android:id="@+id/module_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/module_three_icon"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/truck"
                    android:tint="@color/purple" />

                <!--   <ImageView
                       android:id="@+id/module_three_icon_bold"
                       android:layout_width="@dimen/_20sdp"
                       android:layout_height="@dimen/_20sdp"
                       android:src="@drawable/cart_fade_icon"
                       android:visibility="gone" />-->

                <TextView
                    android:id="@+id/module_three_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/logistic"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>


        </RelativeLayout>

        <!--Module Four-->
        <RelativeLayout
            android:id="@+id/module_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/module_four_icon"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/man"
                    android:tint="@color/purple" />

                <!--     <ImageView
                         android:id="@+id/module_four_icon_bold"
                         android:layout_width="@dimen/_20sdp"
                         android:layout_height="@dimen/_20sdp"
                         android:src="@drawable/profile_fade_color"
                         android:visibility="gone" />-->

                <TextView
                    android:id="@+id/module_four_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/profile"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>